--- a/core/templates/dashboard/super_owner/edit_store.html
+++ b/core/templates/dashboard/super_owner/edit_store.html
@@ -51,7 +51,7 @@
                                 </div>
                                 
                                 <div class="mb-3">
-                                    <label for="description" class="form-label">الوصف</label>
+                                    <label for="description" class="form-label">وصف المتجر</label>
                                     <textarea class="form-control" id="description" name="description" rows="4">{{ store.description|default:'' }}</textarea>
                                 </div>
                             </div>
@@ -93,9 +93,11 @@
                                     <label class="form-label">زمن التوصيل</label>
                                     <div class="row g-2">
                                         <div class="col-6">
+                                            <label for="delivery_time_value" class="form-label">قيمة زمن التوصيل</label>
                                             <input type="number" min="0" class="form-control" id="delivery_time_value" name="delivery_time_value" value="{{ store.delivery_time_value|default:24 }}">
                                         </div>
                                         <div class="col-6">
+                                            <label for="delivery_time_unit" class="form-label">وحدة زمن التوصيل</label>
                                             <select class="form-select" id="delivery_time_unit" name="delivery_time_unit">
                                                 <option value="hour" {% if store.delivery_time_unit == 'hour' or not store.delivery_time_unit %}selected{% endif %}>ساعة</option>
                                                 <option value="day" {% if store.delivery_time_unit == 'day' %}selected{% endif %}>يوم</option>
@@ -105,7 +107,7 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="delivery_fee" class="form-label">رسوم التوصيل</label>
+                                    <label for="delivery_fee" class="form-label">رسوم التوصيل (دينار)</label>
                                     <div class="input-group">
                                         <input type="number" step="0.01" class="form-control" id="delivery_fee" name="delivery_fee" value="{{ store.delivery_fee }}">
                                         <span class="input-group-text">IQD</span>
@@ -113,7 +115,7 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="free_delivery_threshold" class="form-label">حد مجاني للتوصيل</label>
+                                    <label for="free_delivery_threshold" class="form-label">حد مجاني للتوصيل (دينار)</label>
                                     <div class="input-group">
                                         <input type="number" step="0.01" class="form-control" id="free_delivery_threshold" name="free_delivery_threshold" value="{{ store.free_delivery_threshold|default:'' }}">
                                         <span class="input-group-text">IQD</span>
@@ -183,7 +185,7 @@
 <style>
 .form-label,
 .form-check-label {
-    color: #212529 !important;
+    color: inherit;
 }
 </style>
 {% endblock %}
