--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1056,11 +1056,11 @@
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }} alert-dismissible fade show custom-alert" role="alert">
                             <div class="d-flex align-items-center">
-                                {% if message.tags == 'success' %}
+                                {% if 'success' in message.tags %}
                                     <i class="bi bi-check-circle-fill me-2"></i>
-                                {% elif message.tags == 'error' %}
+                                {% elif 'danger' in message.tags %}
                                     <i class="bi bi-exclamation-triangle-fill me-2"></i>
-                                {% elif message.tags == 'warning' %}
+                                {% elif 'warning' in message.tags %}
                                     <i class="bi bi-exclamation-triangle-fill me-2"></i>
                                 {% else %}
                                     <i class="bi bi-info-circle-fill me-2"></i>
